--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "gulp-strip-comments": "^2.5.2"
+    "gulp-strip-comments": "^2.5.2",
+    "node-sass": "^5.0.0"
   }
 }
